# persode

./: .gitignore  CITATION.cff  LICENSE  README.ko.md  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: demo.py
experiments/: _exp3_eval.py  _scenario.py  _style.py  exp1_forgetting_curve.py  exp2_memory_scoring.py  exp3_retrieval.py  exp4_visual_prompt.py  exp5_locomo.py  exp6_epirec.py  run_all.py  tune_exp3_loop.py
persode/: __init__.py  agent.py  analyzer.py  embeddings.py  llm.py  memory.py  onboarding.py  store.py  templates.py
results/: exp1_forgetting_curve.json  exp2_memory_scoring.json  exp3_retrieval.json  exp3_tune_search.jsonl  exp3_tuned_config.json  exp4_journals.json  exp4_journals.md  exp5_locomo.json  exp6_epirec.json
results/exp6_epirec_rankings/: hashing_fused_persode.jsonl  hashing_fused_persode.official.json  hashing_gated_persode.jsonl  hashing_gated_persode.official.json  hashing_recency-only.jsonl  hashing_recency-only.official.json  hashing_salience-only.jsonl  hashing_salience-only.official.json  hashing_similarity-only.jsonl  hashing_similarity-only.official.json
tests/: test_agent.py  test_analyzer.py  test_experiments.py  test_memory.py  test_retrieval.py  test_templates.py
