[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "persode"
version = "0.1.0"
description = "Reference implementation of Persode's episodic memory-aware journaling core (arXiv:2508.20585)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "sukoji" }]
keywords = ["episodic-memory", "rag", "journaling", "forgetting-curve", "llm-agent"]
dependencies = ["numpy>=1.24", "matplotlib>=3.7"]

[project.optional-dependencies]
semantic = ["sentence-transformers>=2.2"]
openai = ["openai>=1.30"]
chroma = ["chromadb>=0.5"]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
include = ["persode*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
